[package]
name = "rush"
version = "0.0.0"
description = "upload file to ali-oss & automic tiny image"
authors = ["charlzyx"]
license = ""
repository = "https://github.com/charlzyx/rush"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "macos-private-api", "updater"] }
window-vibrancy = "0.3.0"
lazy_static = "1.4.0"
# https://github.com/mantou132/nesbox/blob/dev/packages/tauriapp/Cargo.toml#L23
tauri-plugin-window-state = "0.1.0"
window-shadows = "0.2"
qiniu-upload-token = "0.2.0"
[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"] # or "postgres", or "mysql"


[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/tauri-plugin-sql"
# tag = "v0.1.0"
features = ["sqlite"] # or "postgres", or "mysql"
branch = "release"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.21.0"
windows = "0.43.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.24.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
